# neuromorphic-rs

./: Cargo.toml  README.md
.github/workflows/: build_wheels.yml  python.yml
drivers/: .gitignore  Cargo.toml  profile.json
drivers/src/: adapters.rs  configuration.rs  device.rs  devices.rs  error.rs  flag.rs  lib.rs  properties.rs  traits.rs  usb.rs
drivers/src/adapters/: evt3.rs
drivers/src/devices/: centuryarks_silkyevcamhd.rs  prophesee_evk3_hd.rs  prophesee_evk4.rs
drivers/tests/: evk4.rs  evt3.rs
python/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
python/examples/: any_display.py  any_monitor_backlog.py  any_read_many.py  any_read_one.py  any_record_raw.py  evk4_dual_display.py  evk4_external_synchronization.py  evk4_mask.py  evk4_plot_hot_pixels.py  evk4_temperature_illuminance.py  evk4_update_biases.py
python/python/neuromorphic_drivers/: __init__.py  device.py  mask.py  status.py  udev.py
python/python/neuromorphic_drivers/serde/: __init__.py  binary.py  bincode.py  type.py
python/src/: adapters.rs  bytes.rs  lib.rs  structured_array.rs
python/tests/: display.py  dual_display.py  external_synchronization.py  find_hot_pixels.py  read_many.py  record_raw.py  test.py
reflect/: Cargo.toml
reflect/src/: trace.rs
types/: Cargo.toml
types/src/: lib.rs
