[package]
name = "neuromorphic-drivers"
authors = [
    "International Centre for Neuromorphic Systems",
    "Alexandre Marcireau",
]
description = "Neuromorphic devices drivers"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
repository = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
documentation = "https://docs.rs/neuromorphic-drivers/"
readme = "../README.md"

[dependencies]
rusb = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
