[package]
name = "neuromorphic-drivers"
authors = [
    "International Centre for Neuromorphic Systems",
    "Alexandre Marcireau",
]
description = "Neuromorphic devices drivers"
version = "0.6.0"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
repository = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
documentation = "https://docs.rs/neuromorphic-drivers/"
readme = "../README.md"

[dependencies]
bincode = "1.3"
libc = "0.2"
libusb1-sys = "0.6"
neuromorphic-types = "0.4"
paste = "1.0"
rusb = {version = "0.9", features = ["vendored"]}
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
