[package]
name = "python"
version = "0.2.1"
edition = "2021"

[lib]
name = "neuromorphic_drivers"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
neuromorphic-drivers = "0.4"
numpy = "0.19"
paste = "1.0"
pyo3 = {version = "0.19", features = ["extension-module"]}

[build-dependencies]
cc = "1.0"
neuromorphic-drivers = "0.4"
paste = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde-generate = "0.25.1"
reflect = {path = "../reflect"}
