[package]
name = "python"
version = "0.13.3"
edition = "2021"

[lib]
name = "neuromorphic_drivers"
crate-type = ["cdylib"]

[dependencies]
neuromorphic-drivers = "0.13.1"
numpy = "0.21.0"
paste = "1.0"
pyo3 = {version = "0.21", features = ["extension-module"]}

[build-dependencies]
cc = "1.0"
neuromorphic-drivers = "0.13.1"
paste = "1.0"
reflect = {path = "../reflect"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde-generate = "0.25.1"
toml = {version = "0.8", features = ["parse"]}
