[package]
name = "reflect"
version = "0.1.0"
description = "Copied and patched from https://github.com/zefchain/serde-reflection"
documentation = "https://docs.rs/serde-reflection"
repository = "https://github.com/zefchain/serde-reflection"
authors = ["Mathieu Baudet <mathieu.baudet@zefchain.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18.0"
