[package]
name = "neuromorphic_types"
authors = [
    "International Centre for Neuromorphic Systems",
    "Alexandre Marcireau",
]
description = "Shared Neuromorphic data types for drivers and processing frameworks"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
repository = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
documentation = "https://docs.rs/neuromorphic_types/"
readme = "../README.md"
