[package]
name = "neuromorphic-types"
authors = [
    "International Centre for Neuromorphic Systems",
    "Alexandre Marcireau",
]
description = "Shared Neuromorphic data types for drivers and processing frameworks"
version = "0.4.0"
edition = "2021"
license-file = "../LICENSE"
homepage = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
repository = "https://github.com/neuromorphicsystems/neuromorphic-rs/"
documentation = "https://docs.rs/neuromorphic-types/"
readme = "../README.md"
